--- a/src/assets/ejs/index.ejs
+++ b/src/assets/ejs/index.ejs
@@ -7,6 +7,27 @@
   <title>Safefire</title>
 </head>
 
+<style>
+  html {
+    overflow-y: hidden;
+  }
+
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #000000;
+  }
+</style>
+
 <body>
   <div id="app"></div>
 </body>
